# edgeai-gst-apps

./: .gitignore  LICENSE  README.md  download_models.sh  download_test_data.sh  init_script.sh  setup-defect-detection.sh  setup_barcode_demo.sh  setup_script.sh
apps_cpp/: Build_Instructions.txt  CMakeLists.txt
apps_cpp/app_config_checker/: CMakeLists.txt
apps_cpp/app_config_checker/src/: app_config_checker_main.cpp
apps_cpp/app_edgeai/: CMakeLists.txt
apps_cpp/app_edgeai/src/: app_edgeai_main.cpp
apps_cpp/cmake/: common.cmake  cross_compile_aarch64.cmake  setup_cross_compile.sh
apps_cpp/common/: CMakeLists.txt
apps_cpp/common/include/: edgeai_cmd_line_parse.h  edgeai_debug.h  edgeai_demo.h  edgeai_demo_config.h  edgeai_gst_helper.h  edgeai_gst_wrapper.h  edgeai_gstelementmap.h  edgeai_inference_pipe.h  edgeai_types.h  edgeai_utils.h  post_process_image.h  post_process_image_classify.h  post_process_image_human_pose_estimation.h  post_process_image_keypoint_detect.h  post_process_image_object_detect.h  post_process_image_object_detect_lpr.h  post_process_image_segmentation.h  pre_process_image.h
apps_cpp/common/src/: edgeai_cmd_line_parse.cpp  edgeai_debug.cpp  edgeai_demo.cpp  edgeai_demo_config.cpp  edgeai_gst_helper.cpp  edgeai_gst_wrapper.cpp  edgeai_gstelementmap.cpp  edgeai_inference_pipe.cpp  edgeai_utils.cpp  post_process_image.cpp  post_process_image_classify.cpp  post_process_image_human_pose_estimation.cpp  post_process_image_keypoint_detect.cpp  post_process_image_object_detect.cpp  post_process_image_object_detect_LPR.cpp  post_process_image_segmentation.cpp  pre_process_image.cpp
apps_cpp/utils/: CMakeLists.txt
apps_cpp/utils/include/: edgeai_perfstats.h  ti_logger.h  ti_stl_helpers.h
apps_cpp/utils/src/: edgeai_perfstats.cpp  ti_logger.cpp
apps_python/: app_edgeai.py  config_parser.py  dashboard.py  debug.py  edge_ai_class.py  gst_element_map.py  gst_wrapper.py  infer_pipe.py  objects_tracker.py  post_process.py  utils.py
configs/: app_config_template.yaml  barcode-reader.yaml  defect_detection_camera.yaml  defect_detection_test_video.yaml  display_and_encode_example.yaml  face_detection.yaml  gst_plugins_map.yaml  http_src_example.yaml  human_pose_estimation.yaml  image_classification.yaml  imx219_cam_example.yaml  imx390_cam_example.yaml  keypoint_detection.yaml  license_plate_recognition.yaml  multi_input_multi_infer.yaml  object_detection.yaml  ov5640_sensor_example.yaml  remote_display.yaml  rpiV2_cam_example.yaml  rtsp_src_example.yaml  semantic_segmentation.yaml  shared_model_instance.yaml  single_input_multi_infer.yaml
docker/: Dockerfile  docker_build.sh  docker_run.sh  entrypoint.sh  setup_proxy.sh  setup_ti_processor_sdk.sh
optiflow/: config_parser.py  gst_wrapper.py  optiflow.py  optiflow.sh  optiflow_class.py  utils.py
scripts/: compile_cpp_apps.sh  detect_soc.sh  get_fb_resolution.c  install_apps_utils.sh  install_dl_inferer.sh  install_gst_plugins.sh  install_robotics_sdk.sh  install_ti_gpio_libs.sh  install_tiovx_kernels.sh  install_tiovx_modules.sh  ox05b.sh  perf_vis.py  setup_camera_ox05b.sh  setup_cameras.sh  setup_cameras_v3link.sh  setup_model.sh  setup_wallpaper.sh  setup_zbar.sh  udp_vis.py
scripts/gst_tracers/: README.md  (+1 more)
scripts/perf_stats/: CMakeLists.txt  README.md  ti_perfstats.cpp
tests/: camera_datasheet_config.yaml  dump_datasheet_stats.sh  gen_data_sheet.sh  gen_performance_data.sh  gen_performence_data.sh  parse_data_sheet.py  parse_golden_ref.py  parse_log_data.py  parse_perf_data.py  process_performence_data.py  test_all_models.sh  test_config.yaml  test_engine.sh  test_optiflow.sh  test_script.sh  video_datasheet_config.yaml
training/: COCOify_dataset.py  cocovalidator.py  data_manipulation.py
(+26 files in other folders)
